Replace the deprecated `new URL()` constructor (#19159)
Signed-off-by: Leo Siepel <leosiepel@gmail.com>